--- a/client/src/components/updateProfile/UpdateProfile.scss
+++ b/client/src/components/updateProfile/UpdateProfile.scss
@@ -8,10 +8,29 @@
         flex: 1;
         text-align: center;
 
-        .user-img {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
+        .input-user-img {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .labelImg {
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                border: 2px dashed var(--accent-color);
+                cursor: pointer;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+
+            .inputImg {
+                display: none;
+            }
         }
     }
 
