user profile posts added

--- a/client/src/components/profile/Profile.scss
+++ b/client/src/components/profile/Profile.scss
@@ -30,6 +30,10 @@
             margin-top: 12px;
         }
 
+        .bio {
+            margin-top: 6px;
+        }
+
         .follower-info {
             display: flex;
             justify-content: center;
@@ -40,6 +44,9 @@
         .follow, .update-profile {
             margin-top: 20px;
             display: inline-block;
+        }
+        .follow-link {
+            color: var(--accent-color);
         }
     }
 }
