--- a/client/src/components/post/Post.scss
+++ b/client/src/components/post/Post.scss
@@ -9,6 +9,7 @@
         gap: 20px;
         height: 60px;
         padding: 20px;
+        cursor: pointer;
     }
     .content {
         height: 400px;
@@ -16,6 +17,7 @@
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
         }
     }
     .footer {
@@ -25,6 +27,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            cursor: pointer;
 
             .icon {
                 font-size: 1.5rem;
